Fixing z-index with dragging panels

--- a/src/app/components/common/Dropdown.less
+++ b/src/app/components/common/Dropdown.less
@@ -8,6 +8,7 @@
  overflow: hidden;
  border-radius: calc(@option-height / 2);
  box-sizing: border-box;
+ border-bottom: 1px solid @light-gray;
  
  transition: height 0.15s;
  .dropdown-value {
