--- a/src/app/components/layout/panel.less
+++ b/src/app/components/layout/panel.less
@@ -10,5 +10,6 @@
 
 	&.panel-dragging {
 		transition: top 0s, left 0s;
+    z-index: 1002;
 	}
 }
