--- a/src/app/components/results/Result.less
+++ b/src/app/components/results/Result.less
@@ -119,6 +119,7 @@
 .panel-dragging .result-inner {
 	transition: box-shadow 0.25s ease-out;
 	box-shadow: 0px 0px 25px rgba(0,0,0,0.25);
+  z-index: 1050;
 }
 
 .result-expanded-wrapper {
